[package]
name = "mitch_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" 
lsl = { git = "https://github.com/kojofl/liblsl-rust", version = "0.1.3" }
uuid = "1.17.0"
bluez-async = "0.8.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
